[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["kntrllr <as2970@york.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.259"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
