[tool.poetry]
name = "snake.py"
version = "0.1.0"
description = ""
authors = ["Alex Shore <as2970@york.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
